--- a/.github/workflows/zdm_crawler.yml
+++ b/.github/workflows/zdm_crawler.yml
@@ -24,9 +24,9 @@ jobs:
     - name: main logic
       env:
         # 点值的数量>minVoted,才会被推送,填0为都推送
-        minVoted: 10
+        minVoted: 20
         # 评论的数量>minComments,才会被推送,填0为都推送
-        minComments: 2
+        minComments: 5
         # 优惠信息数量>MIN_PUSH_SIZE就会发邮件,否则积累到下一次触发任务再决定是否推送. 不建议填太小的数字,避免邮件太多了
         MIN_PUSH_SIZE: 20
         # 邮箱的smtp服务器地址
@@ -44,7 +44,7 @@ jobs:
     - name: commit & push
       uses: actions-go/push@master
       with:
-        author-email: 'actions@github.com'
-        author-name: 'GitHub Actions'
+        author-email: 'mengzaifeiyang1@qq.com'
+        author-name: 'SMZDM Push'
         commit-message: 'update articles'
         token: ${{ secrets.GIT_TOKEN }}
